[package]
name = "penny"
version = "0.0.1"
edition = "2021"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
log = "0.4.29"
id3 = "1.16.3"
rodio = "0.21.1"
minimp3_fixed = "0.5.4"
clap = { version = "4.5.53", features = ["derive"] }
rustfft = "6.4.1"
notify-rust = "4.11.7"
mp3-duration = "0.1.10"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
tui-logger = "0.17.0"

[dev-dependencies]
tempdir = "0.3.7"
env_logger = "0.11.6"
