[package]
name = "penny"
version = "0.0.1"
edition = "2021"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
log = "0.4.29"
id3 = "1.16.4"
rodio = "0.21.1"
minimp3_fixed = "0.5.4"
clap = { version = "4.5.60", features = ["derive"] }
rustfft = "6.4.1"
notify-rust = "4.12.0"
mp3-duration = "0.1.10"
chrono = { version = "0.4.43", default-features = false, features = ["clock"] }
tui-logger = "0.18.1"

[dev-dependencies]
tempdir = "0.3.7"
env_logger = "0.11.9"
